<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.6.2</version>
        <relativePath/>
    </parent>

    <groupId>ru.mvideo.lards</groupId>
    <artifactId>yandex-geocoder</artifactId>
    <version>0.3.0-SNAPSHOT+58b9f974-1975736913</version>

    <modules>
        <module>yandex-geocoder-app</module>
        <module>yandex-geocoder-api</module>
        <module>yandex-geocoder-client</module>
    </modules>

    <packaging>pom</packaging>

    <properties>
        <!-- Generic properties -->
        <java.version>14</java.version>

		<gitlab.mvideo.project-id>7433065</gitlab.mvideo.project-id>

		<jacoco-plugin.version>0.8.7</jacoco-plugin.version>

        <spring-boot-maven-plugin.version>2.5.4</spring-boot-maven-plugin.version>
        <maven-checkstyle-plugin.version>3.1.2</maven-checkstyle-plugin.version>
        <checkstyle.version>8.36.2</checkstyle.version>
        <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
        <maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
        <maven-failsafe-plugin.version>2.22.2</maven-failsafe-plugin.version>

        <spring-boot-dependencies.version>2.6.2</spring-boot-dependencies.version>
        <spring-cloud-dependencies.version>2021.0.0</spring-cloud-dependencies.version>
        <opentracing-spring-jaeger-starter.version>3.3.1</opentracing-spring-jaeger-starter.version>
        <reactor-tools.version>3.4.9</reactor-tools.version>
        <mapstruct.version>1.4.2.Final</mapstruct.version>
        <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
        <lombok.version>1.18.20</lombok.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud-dependencies.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>io.opentracing.contrib</groupId>
                <artifactId>opentracing-spring-jaeger-cloud-starter</artifactId>
                <version>${opentracing-spring-jaeger-starter.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>io.opentracing.contrib</groupId>
                        <artifactId>opentracing-spring-messaging-starter</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>io.opentracing.contrib</groupId>
                        <artifactId>opentracing-spring-rabbitmq-starter</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>io.opentracing.contrib</groupId>
                        <artifactId>opentracing-spring-cloud-jdbc-starter</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>io.opentracing.contrib</groupId>
                        <artifactId>opentracing-spring-cloud-jms-starter</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>io.opentracing.contrib</groupId>
                        <artifactId>opentracing-spring-cloud-kafka-starter</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>io.opentracing.contrib</groupId>
                        <artifactId>opentracing-spring-cloud-feign-starter</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>io.opentracing.contrib</groupId>
                        <artifactId>opentracing-spring-cloud-hystrix-starter</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>io.opentracing.contrib</groupId>
                        <artifactId>opentracing-spring-cloud-rxjava-starter</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>io.opentracing.contrib</groupId>
                        <artifactId>opentracing-spring-cloud-redis-starter</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>io.opentracing.contrib</groupId>
                        <artifactId>opentracing-spring-cloud-mongo-starter</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>io.opentracing.contrib</groupId>
                        <artifactId>opentracing-spring-cloud-zuul-starter</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>io.opentracing.contrib</groupId>
                        <artifactId>opentracing-spring-cloud-gateway-starter</artifactId>
                    </exclusion>
                    <exclusion>
                        <groupId>io.opentracing.contrib</groupId>
                        <artifactId>opentracing-spring-cloud-websocket-starter</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
            <dependency>
                <groupId>org.mapstruct</groupId>
                <artifactId>mapstruct-jdk8</artifactId>
                <version>${mapstruct.version}</version>
            </dependency>
            <dependency>
                <groupId>io.projectreactor</groupId>
                <artifactId>reactor-tools</artifactId>
                <version>${reactor-tools.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-test</artifactId>
                <version>${spring-boot-dependencies.version}</version>
                <scope>test</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot-maven-plugin.version}</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>repackage</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <encoding>${project.build.sourceEncoding}</encoding>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                        <showDeprecation>true</showDeprecation>
                        <showWarnings>true</showWarnings>
                        <fork>true</fork>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven-surefire-plugin.version}</version>
                    <configuration>
                        <argLine>${argLine} --enable-preview</argLine>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>${maven-failsafe-plugin.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-checkstyle-plugin</artifactId>
                    <version>${maven-checkstyle-plugin.version}</version>
                    <dependencies>
                        <!-- To support 14 java-->
                        <dependency>
                            <groupId>com.puppycrawl.tools</groupId>
                            <artifactId>checkstyle</artifactId>
                            <version>${checkstyle.version}</version>
                        </dependency>
                    </dependencies>
                    <configuration>
                        <configLocation>config/checkstyle/checkstyle.xml</configLocation>
                        <violationSeverity>warning</violationSeverity>
                        <includeTestSourceDirectory>true</includeTestSourceDirectory>
                        <failOnViolation>false</failOnViolation>
                        <failsOnError>false</failsOnError>
                    </configuration>
                    <executions>
                        <execution>
                            <id>validate</id>
                            <phase>validate</phase>
                            <goals>
                                <goal>check</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>${jacoco-plugin.version}</version>
					<executions>
						<execution>
							<id>default-prepare-agent</id>
							<goals>
								<goal>prepare-agent</goal>
							</goals>
						</execution>
						<execution>
							<id>report</id>
							<phase>test</phase>
							<goals>
								<goal>report</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
            </plugins>
        </pluginManagement>
    </build>

	<repositories>
		<repository>
			<id>gitlab-maven</id>
			<url>https://gitlab.com/api/v4/groups/${gitlab.mvideo.project-id}/-/packages/maven/</url>
		</repository>
	</repositories>

	<pluginRepositories>
		<pluginRepository>
			<id>oss.sonatype.org-snapshot</id>
			<url>http://oss.sonatype.org/content/repositories/snapshots</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>

	<distributionManagement>
		<repository>
			<id>gitlab-maven</id>
			<!--suppress UnresolvedMavenProperty -->
			<url>https://gitlab.com/api/v4/projects/${env.CI_PROJECT_ID}/packages/maven</url>
		</repository>
		<snapshotRepository>
			<id>gitlab-maven</id>
			<!--suppress UnresolvedMavenProperty -->
			<url>https://gitlab.com/api/v4/projects/${env.CI_PROJECT_ID}/packages/maven</url>
		</snapshotRepository>
	</distributionManagement>
</project>
